# loom

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  requirements.sh  requirements.txt  setup.py  temp.metis_args.json  update_license.py
doc/: Makefile  adapting.md  architecture.md  architecture.rst  dataflow.dot  dataflow.eps  dataflow.svgz  inference.md  inference.rst  installation.md  installing.md  overview.md  quickstart.md  references.bib  using.md
doc/figures/: Makefile  pipeline.html
examples/: Loom Iris Example.ipynb  README.md
examples/fox/: index.html  main.py  schema.json  test.py
examples/lending_club/: .gitignore  LCDataDictionary.csv  README.md  main.py  schema.csv  schema.json  test.py
examples/pubmed/: main.py
examples/taxi/: .gitignore  example.csv  main.py  schema.json  test.py
loom/: __init__.py  __main__.py  benchmark.py  cFormat.cpp  cFormat.pyx  cleanse.py  config.py  consensus.py  crossvalidate.py  datasets.py  documented.py  format.py  generate.py  gridding.py  group.py  hyperprior.py  predict.py  preql.py  query.py  runner.py  schema.py  score.py  store.py  tasks.py  transforms.py  util.py  watch.py
loom/test/: test_benchmark.py  test_crossvalidate.py  test_documented.py  test_format.py  test_generate.py  test_gridding.py  test_group.py  test_happy_path.py  test_ingest.py  test_main.py  test_posterior_enum.py  test_predict.py  test_preql.py  test_query.py  test_query_math.py  test_runner.py  test_shuffle.py  test_tasks.py  test_transforms.py  test_util.py  util.py
src/: CMakeLists.txt  __main__.py  algorithm8.cc  algorithm8.hpp  annealing_schedule.hpp  args.hpp  assert_close.hpp  assignments.cc  assignments.hpp  atomic_array.hpp  benchmark.py  cFormat.pyx  cat_kernel.cc  cat_kernel.hpp  cat_pipeline.cc  cat_pipeline.hpp  common.hpp  compressed_vector.hpp  config.py  cross_cat.cc  cross_cat.hpp  datasets.py  differ.cc  differ.hpp  format.py  generate.cc  generate.hpp  generate.py  hyper_kernel.cc  hyper_kernel.hpp  hyper_prior.hpp  indexed_vector.hpp  infer.cc  infer_grid.hpp  kind_kernel.cc  kind_kernel.hpp  kind_pipeline.cc  kind_pipeline.hpp  kind_proposer.cc  kind_proposer.hpp  (+48 more)
src/compat/: benchmark.py  format.py  runner.py
src/compat/test/: test_benchmark.py  test_format.py  test_runner.py  test_score_data.py  test_tardis.py  util.py
src/test/: test_benchmark.py  test_format.py  test_generate.py  test_loom.py  test_posterior_enum.py  test_predict.py  test_runner.py  test_score_data.py  test_tardis.py  util.py
